Added real api endpoint

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mn-punch-card-ui",
+  "homepage": "http://www.newtamparewardcabinet.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
