--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,15 +1,17 @@
-<IfModule mod_rewrite.c>
+# Redirect HTTPS to HTTP
+RewriteEngine On
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-  RewriteEngine On
+
+<IfModule mod_rewrite.c>  
+RewriteEngine On
   RewriteBase /
+  
   RewriteRule ^index\.html$ - [L]
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteCond %{REQUEST_FILENAME} !-l
   RewriteRule . /index.html [L]
   
-  # Redirect HTTPS to HTTP
-  RewriteCond %{HTTP:X-Forwarded-Proto} =https
-  RewriteRule ^(.*)$ http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
 </IfModule>
