--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "cypress": "node_modules\\.bin\\cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.5",
+    "cypress": "^5.4.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.5.1"
   }
